<resources>
    <string name="app_name">旺POS</string>
    <string name="exception_opt">服务器数据异常</string>
    <string name="intelligentPOS">智能POS系统</string>
    <string name="desk_code">收款台：</string>
    <string name="cashier_name">收款员：</string>
    <string name="username_hint">输入用户名</string>
    <string name="password_hint">输入密码</string>
    <string name="login">登       录</string>
    <string name="waring_null_username">用户名为空</string>
    <string name="waring_null_password">密码为空</string>
    <string name="lock_info">锁屏状态中</string>
    <string name="know">知道了</string>
    <string name="member_telephone_not_member">该手机号不是会员</string>
    <string name="add_member_succedd">添加会员成功</string>
    <string name="login_err_title">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_input_err">用户名或密码不正确，请重新输入</string>
    <string name="printing">打印中...</string>
    <string name="number_access">会员通道</string>
    <string name="phone_number">手机号</string>
    <string name="vip_card">会员卡</string>
    <string name="scan_QR">扫码</string>
    <string name="member_id_is_not_null">会员ID不能为空</string>
    <string name="please_input_right_phoneNo">请输入正确的手机号码</string>
    <string name="please_swip_card">请刷卡</string>
    <string name="please_input_phoneNo">请输入手机号</string>
    <string name="add_or_verify_member">验证/新增会员</string>
    <string name="other_verify_type">其他验证方式</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="change_mode_off_tips">智能pos已断网\n是否进入脱机销售模式？</string>
    <string name="change_mode_on_tips">智能pos网络已恢复\n是否进入正常销售模式？</string>
    <string name="pay">支付</string>
    <string name="desk_code_no">收款台号：</string>
    <string name="bill_id">订单号：</string>
    <string name="salesman">销售员：</string>
    <string name="total_money">总计金额</string>
    <string name="consume_score">消耗积分</string>
    <string name="consume_score_m">消耗积分：</string>
    <string name="yuan">元</string>
    <string name="fen">分</string>
    <string name="confirm_order">确认订单</string>
    <string name="please_input_money">请输入应付金额</string>
    <string name="select_good">选择商品</string>
    <string name="add_good">添加商品</string>
    <string name="add_score_good">添加积分商品</string>
    <string name="look_member">查看会员</string>
    <string name="add_saleman">添加销售</string>
    <string name="money">金额</string>
    <string name="score">积分</string>
    <string name="warning_no_saleman">没有销售员！</string>
    <string name="warning_no_good">没有商品！</string>
    <string name="brand_good">品牌商品</string>
    <string name="warning_no_input_format">输入格式不正确</string>
    <string name="warning_select_saleman">请选择一个销售员</string>
    <string name="warning_select_good">请选择一个商品</string>
    <string name="warning_score_notfull">积分不足</string>
    <string name="cart_goods_sum_not_zero">数量不能为零 </string>
    <string name="repeat">重试</string>
    <string name="confirm">确认</string>
    <string name="query">查询</string>
    <string name="cancle">取消</string>
    <string name="checkout">结账</string>
    <string name="order_total_money">订单总额</string>
    <string name="member_equity">会员权益</string>
    <string name="coupon_deduction">优惠券抵扣</string>
    <string name="score_deduction">积分抵扣</string>
    <string name="score_deduction_m">积分抵扣：</string>
    <string name="wait_money">待付金额</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_type_ditch">支付渠道</string>
    <string name="pay_info">支付信息</string>
    <string name="input_money">请输入金额</string>
    <string name="cancle_pay">撤销支付</string>
    <string name="submit_order">提交订单</string>
    <string name="waring_format_msg">输入格式异常</string>
    <string name="waring_money_over">输入金额过大</string>
    <string name="waring_money_not_zero">输入金额不能为零</string>
    <string name="waring_msg_pay_success">支付已经完成</string>
    <string name="waring_msg_large">支付金额超出订单总额</string>
    <string name="waring_msg_pay_failed">支付尚未完成！</string>
    <string name="waring_msg_pay_cancle_failed">交易进行中,请稍后</string>
    <string name="waring_msg_pay_return_failed">含有未撤销的交易！</string>
    <string name="waring_msg_pay_return_no">没有可以撤销的交易</string>
    <string name="waring_coupon_over_msg">优惠券已经超出,不能使用!</string>
    <string name="waring_score_over_msg">积分大于待支付金额!</string>
    <string name="waring_paytype_err_msg">该款台没有该收款方式</string>
    <string name="waring_scan_coupon_msg">不能重复扫描同一张纸券</string>
    <string name="waring_msg">输入的值不能大于可用值！</string>
    <string name="waring_cannot_use_msg">当前积分不能抵扣</string>
    <string name="waring_param_err">参数异常</string>
    <string name="waring_no_equity">本次交易没有可用的权益</string>
    <string name="weichat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="bank">银行卡</string>
    <string name="cash">现  金</string>
    <string name="recorded">补  录</string>
    <string name="payment_type_change">找零</string>
    <string name="weichat_pay">微钱宝支付：</string>
    <string name="alipay_pay">支付宝支付：</string>
    <string name="bank_pay">银行卡支付：</string>
    <string name="cash_pay">现金  支付：</string>
    <string name="already_pay">已支付</string>
    <string name="cancled_pay">已撤销</string>
    <string name="cancleing_pay">撤销中</string>
    <string name="cancled">撤销</string>
    <string name="cancled_failed">撤销失败</string>
    <string name="cancled_query">需要查询</string>
    <string name="cancled_querying">查询中</string>
    <string name="returning_pay">退货中</string>
    <string name="returning_pay_failed">退货失败</string>
    <string name="member_hold_coupon">会员持券</string>
    <string name="hole">拥有</string>
    <string name="uesed">使用</string>
    <string name="deduction">抵扣</string>
    <string name="payment_info">支付详情</string>
    <string name="order_info">账单信息</string>
    <string name="order_id">订单编号：</string>
    <string name="order_time">订单时间：</string>
    <string name="order_money">订单金额：</string>
    <string name="coupon">代金券</string>
    <string name="coupon_m">代金券：</string>
    <string name="real_pay">实际支付</string>
    <string name="real_pay_m">实际支付：</string>
    <string name="score_info">积分信息</string>
    <string name="add_score">新增积分</string>
    <string name="add_score_m">新增积分：</string>
    <string name="now_score_m">当前积分：</string>
    <string name="score_exchange">积分抵现</string>
    <string name="send_coupon">交易发券</string>
    <string name="print_coupon">打印优惠券</string>
    <string name="selected_plate">选择停车牌</string>
    <string name="done">完成</string>
    <string name="edit">编辑</string>
    <string name="waring_no_coupon_msg">没有获得优惠券</string>
    <string name="waring_please_selected">请选择一张优惠券</string>
    <string name="waring_cannot_print_msg">当前券不可打印</string>
    <string name="bing_plate">已绑定车牌</string>
    <string name="temporary_plate">临时车牌</string>
    <string name="please_input_plate">请输入车牌号</string>
    <string name="return_normal">普通退货</string>
    <string name="return_good">退款商品</string>
    <string name="return_money">退款金额</string>
    <string name="return_handperson">退款经手人</string>
    <string name="please_select_retuern_good">请选择退款商品</string>
    <string name="please_select_handperson">请选择经手人</string>
    <string name="confirm_return_order">确认退货单</string>
    <string name="order_searching">查询中...</string>
    <string name="sending">发送中...</string>
    <string name="send_success">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="waring_no_bind_plate">没有绑定车牌</string>
    <string name="waring_input_park_coupon_time">没有停车券时间</string>
    <string name="waring_input_plate">请输入车牌</string>
    <string name="order_seach_success">查询成功</string>
    <string name="waring_putfull_roder">请补全退货单</string>
    <string name="waring_return_moeny_right_err">请填写正确的金额</string>
    <string name="waring_return_moeny_null">退款金额不能为0</string>
    <string name="cannot_support">不支持</string>
    <string name="return_msg">退款</string>
    <string name="waring_return_moeny_mate_err">退款金额不匹配</string>
    <string name="return_order_info">退货单详情</string>
    <string name="returns">退货</string>
    <string name="return_reason">退款原因</string>
    <string name="return_info">退款信息</string>
    <string name="return_total_money">退款总额</string>
    <string name="please_select_return_reason">请选择退款原因</string>
    <string name="warning_no_return_reason">没有退款原因</string>
    <string name="warning_no">无</string>
    <string name="return_succeed">退款成功</string>
    <string name="return_order_number">退货单号</string>
    <string name="return_order_number_m">退货单号：</string>
    <string name="return_order_time">退货时间</string>
    <string name="return_order_time_m">退货时间：</string>
    <string name="return_money_m">退货金额：</string>
    <string name="return_real_money">实际退款</string>
    <string name="return_real_money_m">实际退款：</string>
    <string name="score_return">积分返还</string>
    <string name="score_return_m">积分返还：</string>
    <string name="return_coupon_m">回收券：</string>
    <string name="return_yuan_coupon_m">原单使用券：</string>
    <string name="change">找零</string>
    <string name="change_m">找零:</string>
    <string name="return_used_score">退货耗分</string>
    <string name="return_used_score_m">退货耗分：</string>
    <string name="score_good_return">积分商品返还</string>
    <string name="score_good_return_m">积分商品返还：</string>
    <string name="score_deduction_return">积分抵现返还</string>
    <string name="score_deduction_return_m">积分抵现返还：</string>
    <string name="member_info">会员详情</string>
    <string name="member_name">姓名</string>
    <string name="member_name_m">姓名：</string>
    <string name="member_card_no">卡号</string>
    <string name="member_card_no_m">卡号：</string>
    <string name="member_score_m">积分：</string>
    <string name="sale_info">消费信息</string>
    <string name="sale_total">消费总计</string>
    <string name="sale_times">消费次数</string>
    <string name="unit_price">客单价</string>
    <string name="time">时间</string>
    <string name="good_recommend">商品推荐</string>
    <string name="used_coupon">用券</string>
    <string name="member_activate">会员激活</string>
    <string name="return_order">选单退货</string>
    <string name="return_score">退货积分</string>
    <string name="score_good">积分商品</string>
    <string name="return_ditch">退款渠道</string>
    <string name="remark">备注</string>
    <string name="add_used_score">增耗积分</string>
    <string name="add_used_score_total">增耗积分总额</string>
    <string name="score_ditch">积分渠道</string>
    <string name="score_deduction_cash">积分抵现</string>
    <string name="score_deduction_cash_m">积分抵现：</string>
    <string name="submit_return_order">提交退货单</string>
    <string name="used_score_account">消耗积分额度</string>
    <string name="job_report">本班报表</string>
    <string name="day_report">本日报表</string>
    <string name="shop">店铺</string>
    <string name="shop_m">店铺：</string>
    <string name="return_count">退款笔数</string>
    <string name="return_count_total">退款笔数合计</string>
    <string name="return_statistics">退款统计</string>
    <string name="return_money_total">退款金额合计</string>
    <string name="collection_count">收款笔数</string>
    <string name="collection_count_total">收款笔数合计</string>
    <string name="collection_ditch">收款渠道</string>
    <string name="collection_statistics">收款统计</string>
    <string name="collection_money">收款金额</string>
    <string name="collection_money_total">收款金额合计</string>
    <string name="money_total">金额合计</string>
    <string name="ditch">渠道</string>
    <string name="total">合计</string>
    <string name="print">打印</string>
    <string name="statistics">统计</string>
    <string name="count">笔数</string>
    <string name="count_total">笔数合计</string>
    <string name="times">笔</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_shenfen">请输入身份证号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="shenfen">身份证</string>
    <string name="phone">手机号</string>
    <string name="code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="has_offline_data">有脱机数据未上传\n是否上传脱机数据？</string>
</resources>