<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_bg_color"
    tools:context="com.symboltech.wangpos.activity.MemberActivateActivity">
    <include android:id="@+id/common_title_bar" layout="@layout/common_title_bar" />

    <LinearLayout
        android:layout_marginTop="@dimen/margin_xz"
        android:layout_marginLeft="@dimen/margin_xz"
        android:layout_marginRight="@dimen/margin_sv"
        android:layout_below="@id/common_title_bar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/height_osz"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/font_color"
                android:text="@string/member_name"
                android:textSize="@dimen/font_size_tf"/>
            <EditText
                android:id="@+id/edit_input_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_ez"
                android:hint="@string/please_input_name"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/font_size_rz"
                android:textColor="@color/font_color"
                android:gravity="center"
                android:background="@drawable/edittext_bg_selector"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_oz"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/height_osz"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/font_color"
                android:text="@string/shenfen"
                android:textSize="@dimen/font_size_tf"/>
            <EditText
                android:id="@+id/edit_input_shenfen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_ez"
                android:hint="@string/please_input_shenfen"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/font_size_rz"
                android:textColor="@color/font_color"
                android:gravity="center"
                android:background="@drawable/edittext_bg_selector"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/margin_oz"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/height_osz"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/font_color"
                android:text="@string/phone"
                android:textSize="@dimen/font_size_tf"/>
            <EditText
                android:id="@+id/edit_input_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_ez"
                android:hint="@string/please_input_phone"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/font_size_rz"
                android:textColor="@color/font_color"
                android:gravity="center"
                android:background="@drawable/edittext_bg_selector"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_oz"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/height_osz"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/font_color"
                android:text="@string/code"
                android:textSize="@dimen/font_size_tf"/>
            <EditText
                android:id="@+id/edit_input_code"
                android:layout_width="@dimen/height_ttz"
                android:layout_height="@dimen/height_ez"
                android:hint="@string/please_input_code"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/font_size_rz"
                android:textColor="@color/font_color"
                android:gravity="center"
                android:background="@drawable/edittext_bg_selector"/>

            <TextView
                android:id="@+id/text_send_code"
                android:layout_width="@dimen/height_oxz"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_rv"
                android:textColor="@color/white"
                android:background="@drawable/btn_blue_bg"
                android:text="@string/send_code"
                android:textSize="@dimen/font_size_tf"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/margin_rz"
        android:layout_marginLeft="@dimen/margin_rz"
        android:layout_marginBottom="@dimen/margin_fz"
        android:orientation="horizontal"
        android:layout_height="@dimen/height_ez">
        <TextView
            android:id="@+id/text_cancle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancle"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/margin_rz"
            android:background="@drawable/btn_red_bg"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/text_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:background="@drawable/btn_green_bg"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
