<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="@dimen/height_orz">

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size_rx"
            android:layout_marginLeft="@dimen/margin_rz"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/font_color"
            android:text="@string/total"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_fz"
        android:layout_toRightOf="@id/text_total"
        android:gravity="center"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_tf"
            android:text="@string/return_money"
            android:textColor="@color/font_color"/>
        <TextView
            android:id="@+id/text_return_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_rz"
            android:layout_marginLeft="8dp"
            android:text="0"
            android:textColor="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_tf"
            android:layout_marginLeft="8dp"
            android:text="@string/yuan"
            android:textColor="@color/font_color"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_return_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_tf"
                android:text="@string/return_score"
                android:textColor="@color/font_color"/>
            <TextView
                android:id="@+id/text_return_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_rz"
                android:layout_marginLeft="8dp"
                android:text="0"
                android:textColor="@color/red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_tf"
                android:layout_marginLeft="8dp"
                android:text="@string/fen"
                android:textColor="@color/font_color"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_confirm_return_order"
        android:layout_width="@dimen/height_tez"
        android:layout_height="match_parent"
        android:text="@string/confirm_return_order"
        android:textSize="@dimen/font_size_rx"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/login_bt_selector"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
