<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="@dimen/height_130">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_40"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_24"
            android:text="@string/total_money"
            android:textColor="@color/font_color"/>
        <TextView
            android:id="@+id/text_total_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_30"
            android:layout_marginLeft="8dp"
            android:text="0"
            android:textColor="@color/view_font_red_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_24"
            android:layout_marginLeft="8dp"
            android:text="@string/yuan"
            android:textColor="@color/font_color"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_24"
                android:text="@string/consume_score"
                android:textColor="@color/font_color"/>
            <TextView
                android:id="@+id/text_consume_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_30"
                android:layout_marginLeft="8dp"
                android:text="0"
                android:textColor="@color/view_font_red_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_24"
                android:layout_marginLeft="8dp"
                android:text="@string/fen"
                android:textColor="@color/font_color"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="@dimen/height_280"
        android:layout_height="match_parent"
        android:text="@string/confirm_order"
        android:textSize="@dimen/font_size_36"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/login_bt_selector"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
