<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/view_bg_color"
    tools:context="com.symboltech.wangpos.activity.MemberAccessActivity">

    <include layout="@layout/common_title_bar" />

    <LinearLayout
        android:id="@+id/ll_phone_number"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="@dimen/margin_ooz"
            android:layout_marginTop="@dimen/margin_ooz"
            android:layout_marginRight="@dimen/margin_ooz">
            <ImageView
                android:id="@+id/imageview_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/phone_before_selected"/>
            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_ozz"
                android:gravity="center_vertical"
                android:textSize="@dimen/big_font_size"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/edit_font_color"
                android:hint="@string/please_input_phoneNo"
                android:background="@null"/>
        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_marginTop="8dp"
            android:layout_width="@dimen/line_xzz"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/line_color"/>
        <TextView
            android:id="@+id/text_add_or_verify_member"
            android:layout_marginTop="25dp"
            android:layout_width="@dimen/height_xxz"
            android:layout_height="@dimen/height_ez"
            android:layout_gravity="center"
            android:text="@string/add_or_verify_member"
            android:gravity="center"
            android:textSize="@dimen/big_font_size"
            android:textColor="@color/white"
            android:background="@drawable/btn_green_bg"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_swaip_card"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/text_msg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_rvz"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/font_color"
            android:text="@string/please_swip_card"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_font_size"
        android:layout_marginTop="@dimen/margin_ooz"
        android:textColor="@color/font_color"
        android:text="@string/other_verify_type"
        android:layout_gravity="center"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radioGroup_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vz"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/text_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:gravity="center"
            android:checked="true"
            android:drawableTop="@drawable/btn_phone_number_selector"
            android:drawablePadding="@dimen/margin_tz"
            android:textColor="@drawable/radiobt_font_color_selector"
            android:text="@string/phone_number"/>
        <RadioButton
            android:id="@+id/text_vip_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_ozz"
            android:drawableTop="@drawable/btn_vip_card_selector"
            android:drawablePadding="@dimen/margin_tz"
            android:textColor="@drawable/radiobt_font_color_selector"
            android:text="@string/vip_card"/>
        <RadioButton
            android:id="@+id/text_sacn_QR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_ozz"
            android:drawableTop="@drawable/btn_scan_qr_selector"
            android:drawablePadding="@dimen/margin_tz"
            android:textColor="@drawable/radiobt_font_color_selector"
            android:text="@string/scan_QR"/>
    </RadioGroup>
</LinearLayout>
