<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/height_xzz"
    android:layout_height="@dimen/height_fzz"
    android:background="@color/white"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/image_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_rz"
        android:background="@color/color_bg" />
    <LinearLayout
        android:id="@+id/ll_input_money"
        android:layout_below="@id/image_title"
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/margin_sz"
        android:layout_marginRight="@dimen/margin_sz"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_log_load_style_tips"
            android:layout_marginTop="@dimen/margin_vz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/has_offline_data"/>
        <LinearLayout
            android:layout_marginTop="@dimen/margin_vz"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_ez">

            <TextView
                android:id="@+id/dialog_log_load_style_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_ez"
                android:text="@string/cancle"
                android:gravity="center"
                android:textSize="@dimen/font_size_rz"
                android:textColor="@color/white"
                android:background="@drawable/btn_red_bg"/>
            <TextView
                android:id="@+id/dialog_log_load_style_yes"
                android:layout_marginLeft="@dimen/margin_rz"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_ez"
                android:text="@string/confirm"
                android:gravity="center"
                android:textSize="@dimen/font_size_rz"
                android:textColor="@color/white"
                android:background="@drawable/btn_green_bg"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>